fix: align the body content of about us page with the header and footer

--- a/scrybe_frontend/src/pages/AboutUs/About.module.scss
+++ b/scrybe_frontend/src/pages/AboutUs/About.module.scss
@@ -13,6 +13,7 @@
   
   $heading: #313131;
   $blue: #006cff;
+  $boxblue: #8ABBFF;
   $text: #1d1d1c;
   $blue-bg: #e6f0ff;
   
@@ -61,15 +62,17 @@
   }
   
   .container {
-    padding: 100px;
-    background-color: white;
+    // background-color: white;
+    width: 95%;
+    max-width: 1440px;
+    margin: 0 auto;
   
-    .line {
-      width: 100%;
-      height: 1px;
-      background-color: $blue;
-      margin-top: 30px;
-    }
+    // .line {
+    //   width: 100%;
+    //   height: 1px;
+    //   background-color: $blue;
+    //   margin-top: 30px;
+    // }
   
     .heading {
       font-size: 48px;
@@ -77,7 +80,8 @@
       line-height: 56px;
       text-align: center;
       color: $text;
-      padding-bottom: 40px;
+      // padding-bottom: 40px;
+      // margin-bottom: 2.5em;
   
       @include mobile {
         font-size: 24px;
@@ -85,8 +89,9 @@
       }
     }
     .contain {
-      padding-left: 100px;
-      padding-right: 100px;
+      width: 60%;
+      margin: 5em auto;
+      border-bottom: 1px solid #B0CAD9;
   
       @include tablet {
         padding-left: 0px;
@@ -139,9 +144,13 @@
       text-align: center;
     }
   }
+
+  .overall__value {
+      background-color: $blue-bg;
+      padding-top: 2.5em;
+  }
   
   .container__values {
-    background-color: $blue-bg;
   
     .row__col {
       display: flex;
@@ -158,7 +167,7 @@
     }
   
     .wrap {
-      border: 1px solid $blue;
+      border: 1px solid $boxblue;
       padding: 20px;
       border-radius: 8px;
       margin-bottom: 50px;
@@ -186,14 +195,25 @@
       }
     }
   }
+
+
   .container__partners {
     p {
       text-align: center;
+      margin-top: 1em;
       @extend %paragraph;
     }
+
+    .row__col {
+      margin-top: 3.5em;
+    }
+
     .row {
       display: flex;
+      justify-content: space-between;
       flex-direction: row;
+      width: 95%;
+      margin: 0 auto;
   
       @include tablet {
         flex-wrap: wrap;
@@ -207,10 +227,9 @@
     }
     .companies {
       display: flex;
-      width: 25%;
       align-items: center;
-      padding: 50px 0px;
-  
+      margin-top: 1em;
+      
       @include tablet {
         width: 40%;
         padding: 10px;
@@ -231,7 +250,9 @@
       }
     }
     .partners__text {
-      padding: 0px 150px;
+      // padding: 0px 150px;
+      width: 60%;
+      margin: 0 auto;
   
       @include tablet {
         padding: 20px;
@@ -241,7 +262,14 @@
       }
     }
   }
+
+
   .container__team {
+
+    .row__col {
+      margin-top: 5em;
+    }
+
     .row {
       flex-direction: column;
     }
@@ -269,6 +297,7 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
+      margin-top: 1.5em;
   
       @include tablet {
         justify-content: space-between;
@@ -292,6 +321,7 @@
       }
     }
     p {
+      margin-top: .5em;
       @extend %paragraph;
   
       @include mobile {
@@ -299,8 +329,10 @@
       }
     }
     .team__text {
-      padding: 0px 150px;
-      margin-bottom: 50px;
+      width: 60%;
+      margin: 0 auto;
+      // padding: 0px 150px;
+      // margin-bottom: 50px;
       text-align: center;
   
       @include mobile {
@@ -311,10 +343,13 @@
       }
     }
   }
+
+
   .hero {
     .row {
-      padding-top: 100px;
-      padding-bottom: 100px;
+      margin-bottom: 3em;
+      // padding-top: 100px;
+      // padding-bottom: 100px;
       @include tablet {
         padding-top: 0px;
       }
@@ -323,6 +358,11 @@
         padding-bottom: 50px;
       }
     }
+
+    h1 {
+      margin-bottom: .5em;
+    }
+
     h1 {
       @include mobile {
         padding: 0px 50px;
